Ordnung ist das halbe Leben, drum lebe ganz. - Helper Package, view.image Package hinzugefügt - DatabaseManager neu - model.collections, DataBaseManager und FilterFrame als Singleton wuhuhu

--- a/view/InitPanel.form
+++ b/view/InitPanel.form
@@ -80,7 +80,7 @@
     <Component class="javax.swing.JLabel" name="lblCube">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/view/lagerDimensions.gif"/>
+          <Image iconType="3" name="/view/images/lagerDimensions.gif"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel7"/>
       </Properties>
