--- a/view/LoginPanel.form
+++ b/view/LoginPanel.form
@@ -68,7 +68,7 @@
               </Group>
               <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
               <Component id="loginButton" min="-2" pref="42" max="-2" attributes="0"/>
-              <EmptySpace pref="54" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -99,7 +99,7 @@
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/view/lagIcon.png"/>
+          <Image iconType="3" name="/view/images/lagIcon.png"/>
         </Property>
       </Properties>
     </Component>
