--- a/view/InitFaecherPanel.form
+++ b/view/InitFaecherPanel.form
@@ -421,7 +421,7 @@
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/view/lagerDimensions2.gif"/>
+          <Image iconType="3" name="/view/images/lagerDimensions2.gif"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel7"/>
       </Properties>
