--- a/view/MainPanel.form
+++ b/view/MainPanel.form
@@ -43,7 +43,7 @@
               <Color blue="33" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/view/schrauben.png"/>
+              <Image iconType="3" name="/view/images/schrauben.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="    Teilebestand"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
@@ -60,7 +60,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/view/lagerBestand.gif"/>
+              <Image iconType="3" name="/view/images/lagerBestand.gif"/>
             </Property>
             <Property name="text" type="java.lang.String" value="  Lagerbestand"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
@@ -77,7 +77,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/view/lagerBewegung.gif"/>
+              <Image iconType="3" name="/view/images/lagerBewegung.gif"/>
             </Property>
             <Property name="text" type="java.lang.String" value="  Warenbewegung"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
