--- a/view/TeilebestandPanel.form
+++ b/view/TeilebestandPanel.form
@@ -49,7 +49,7 @@
                   <Component id="jLabel1" min="-2" pref="151" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="28" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
