--- a/view/LagerbestandPanel.form
+++ b/view/LagerbestandPanel.form
@@ -61,16 +61,16 @@
                       <Component id="filternButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="521" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="470" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="teilEinlagernButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="teilAuslagernButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="teilUmlagernButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="teilSplittenButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
